Fixed minor implementation bugs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+    
     "files.associations": {
         "utility": "cpp",
         "__bit_reference": "cpp",
@@ -23,6 +24,7 @@
         "cmath": "cpp",
         "complex": "cpp",
         "condition_variable": "cpp",
+        "C_Cpp.errorSquiggles" : "Enabled",
         "cstdarg": "cpp",
         "cstddef": "cpp",
         "cstdint": "cpp",
