--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -70,6 +70,7 @@
         "hashtable": "cpp",
         "bit": "cpp",
         "memory_resource": "cpp",
-        "iterator": "cpp"
+        "iterator": "cpp",
+        "__functional_base_03": "cpp"
     }
 }
